--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     </main>
     <footer class="footer">
+      <p class="footer__copyright">&copy;2020 Mesto Russia</p>
 
     </footer>
   </div>
