--- a/index.html
+++ b/index.html
@@ -14,6 +14,73 @@
       <img src="images/logo1.svg" alt="Логотип проекта" class="header-logo">
     </header>
     <main class="content">
+      <section class="main-page">
+
+        <div class="profile">
+
+          <img src="images/Avatar-kusto.jpg" alt="аватар профиля" class="profile__avatar">
+          <div class="profile__profile-info">
+
+            <p class="profile__name">Жак Ив Кусто</p>
+            <button class="profile__edit-button">
+              <img src="images/EditButton1.svg" alt="кнопка редактирования профиля" class="profile__edit-button-image">
+            </button>
+            <p class="profile__about-self">Исследователь океана</p>
+          </div>
+          <button class="profile__add-button">
+              <img src="images/AddButton.svg" alt="кнопка добавления контента" class="profile__add-button-image">
+          </button>
+        </div>
+
+        <div class="elements">
+
+          <ul class="elements__list">
+
+            <li>
+              <figure class="element">
+                <img src="images/karachaevsk.jpg" alt="" class="element__image">
+                <figcaption class="element__caption">
+                  <p class="element__place">Карачаевск</p>
+                  <button class="element__heart">
+                    <img src="images/heart.svg" alt="">
+                  </button>
+                </figcaption>
+              </figure>
+            </li>
+
+            <li class="elements__item">
+            </li>
+
+            <li class="elements__item">
+            </li>
+
+            <li class="elements__item">
+            </li>
+
+            <li class="elements__item">
+            </li>
+
+            <li class="elements__item">
+            </li>
+
+          </ul>
+
+          <div class="popup">
+            <div class="popup__container">
+              <img src="images/Close.svg" alt="Закрыть окно" class="popup__close">
+              <form action="#" class="form">
+
+                <h2 class="form__header">Редактировать профиль</h2>
+
+                <input type="text" class="form__item" placeholder="Жак Ив Кусто">
+                <input type="text" class="form__item" placeholder="Исследователь океана">
+                <button type="submit" class="form__submit-button">Сохранить</button>
+              </form>
+            </div>
+          </div>
+
+        </div>
+      </section>
 
     </main>
     <footer class="footer">
