--- a/index.html
+++ b/index.html
@@ -11,84 +11,106 @@
 <body>
   <div class="page">
     <header class="header">
-      <img src="images/logo1.svg" alt="Логотип проекта" class="header-logo">
+      <img src="images/logo1.svg" alt="Логотип проекта" class="header__logo">
     </header>
     <main class="content">
       <section class="main-page">
 
         <div class="profile">
-
-          <img src="images/Avatar-kusto.jpg" alt="аватар профиля" class="profile__avatar">
+          <div class="profile__avatar"></div>
           <div class="profile__profile-info">
+            <div class="profile__edit-info">
+              <h1 class="profile__name">Жак Ив Кусто</h1>
+              <button class="profile__edit-button"></button>
+            </div>
 
-            <p class="profile__name">Жак Ив Кусто</p>
-            <button class="profile__edit-button">
-              <img src="images/EditButton1.svg" alt="кнопка редактирования профиля" class="profile__edit-button-image">
-            </button>
             <p class="profile__about-self">Исследователь океана</p>
           </div>
-          <button class="profile__add-button">
-              <img src="images/AddButton.svg" alt="кнопка добавления контента" class="profile__add-button-image">
-          </button>
+          <button class="profile__add-button"></button>
         </div>
 
-        <div class="elements">
+        <ul class="elements">
+          <li>
+            <figure class="element">
+              <img src="images/karachaevsk.jpg" alt="Сентинский храм" class="element__image">
+              <figcaption class="element__caption">
+                <p class="element__place">Карачаевск</p>
+                <button class="element__heart"></button>
+              </figcaption>
+            </figure>
+          </li>
 
-          <ul class="elements__list">
+          <li>
+            <figure class="element">
+              <img src="images/elbrus.jpg" alt="Эльбрус" class="element__image">
+              <figcaption class="element__caption">
+                <p class="element__place">Гора Эльбрус</p>
+                <button class="element__heart"></button>
+              </figcaption>
+            </figure>
+          </li>
 
-            <li>
-              <figure class="element">
-                <img src="images/karachaevsk.jpg" alt="" class="element__image">
-                <figcaption class="element__caption">
-                  <p class="element__place">Карачаевск</p>
-                  <button class="element__heart">
-                    <img src="images/heart.svg" alt="">
-                  </button>
-                </figcaption>
-              </figure>
-            </li>
+          <li>
+            <figure class="element">
+              <img src="images/dombay1.jpg" alt="Домбай" class="element__image">
+              <figcaption class="element__caption">
+                <p class="element__place">Домбай</p>
+                <button class="element__heart"></button>
+              </figcaption>
+            </figure>
+          </li>
 
-            <li class="elements__item">
-            </li>
+          <li>
+            <figure class="element">
+              <img src="images/elbrus.jpg" alt="Эльбрус" class="element__image">
+              <figcaption class="element__caption">
+                <p class="element__place">Гора Эльбрус</p>
+                <button class="element__heart"></button>
+              </figcaption>
+            </figure>
+          </li>
 
-            <li class="elements__item">
-            </li>
+          <li>
+            <figure class="element">
+              <img src="images/dombay1.jpg" alt="Домбай" class="element__image">
+              <figcaption class="element__caption">
+                <p class="element__place">Домбай</p>
+                <button class="element__heart"></button>
+              </figcaption>
+            </figure>
+          </li>
 
-            <li class="elements__item">
-            </li>
+          <li>
+            <figure class="element">
+              <img src="images/karachaevsk.jpg" alt="Сентинский храм " class="element__image">
+              <figcaption class="element__caption">
+                <p class="element__place">Карачаево-Черкесия</p>
+                <button class="element__heart"></button>
+              </figcaption>
+            </figure>
+          </li>
+        </ul>
 
-            <li class="elements__item">
-            </li>
 
-            <li class="elements__item">
-            </li>
-
-          </ul>
-
-          <div class="popup">
-            <div class="popup__container">
-              <img src="images/Close.svg" alt="Закрыть окно" class="popup__close">
-              <form action="#" class="form">
-
-                <h2 class="form__header">Редактировать профиль</h2>
-
-                <input type="text" class="form__item" placeholder="Жак Ив Кусто">
-                <input type="text" class="form__item" placeholder="Исследователь океана">
-                <button type="submit" class="form__submit-button">Сохранить</button>
-              </form>
-            </div>
-          </div>
-
+        <div class="popup">
+          <form action="#" class="form">
+            <img src="images/Close.svg" alt="Закрыть окно" class="popup__close">
+            <h2 class="form__header">Редактировать профиль</h2>
+            <input required minlength="2" type="text" class="form__item form__item_type_name" placeholder="Жак Ив Кусто">
+            <input required minlength="2" type="text" class="form__item form__item_type_about" placeholder="Исследователь океана">
+            <button type="submit" class="form__submit-button">Сохранить</button>
+          </form>
         </div>
       </section>
-
     </main>
+
     <footer class="footer">
       <p class="footer__copyright">&copy;2020 Mesto Russia</p>
 
     </footer>
   </div>
 
+  <script src="js/index.js"></script>
 </body>
 
 </html>
