--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
     <header class="header">
       <img src="images/logo1.svg" alt="Логотип проекта" class="header__logo">
     </header>
-    <main class="content">
-      <section class="main-page">
+    <main class="main-page">
 
-        <div class="profile">
-          <div class="profile__avatar"></div>
-          <div class="profile__profile-info">
-            <div class="profile__edit-info">
-              <h1 class="profile__name">Жак Ив Кусто</h1>
-              <button class="profile__edit-button"></button>
-            </div>
-
-            <p class="profile__about-self">Исследователь океана</p>
+      <section class="profile">
+        <div class="profile__avatar"></div>
+        <div class="profile__profile-info">
+          <div class="profile__edit-info">
+            <h1 class="profile__name">Жак Ив Кусто</h1>
+            <button class="profile__edit-button"></button>
           </div>
-          <button class="profile__add-button"></button>
-        </div>
 
+          <p class="profile__about-self">Исследователь океана</p>
+        </div>
+        <button class="profile__add-button"></button>
+      </section>
+
+      <section class="elements-section">
         <ul class="elements">
           <li>
             <figure class="element">
@@ -90,17 +90,19 @@
             </figure>
           </li>
         </ul>
+      </section>
 
+      <div class="popup">
+        <form action="#" class="form">
+          <button class="popup__close"></button>
 
-        <div class="popup">
-          <form action="#" class="form">
-            <img src="images/Close.svg" alt="Закрыть окно" class="popup__close">
-            <h2 class="form__header">Редактировать профиль</h2>
-            <input required minlength="2" type="text" class="form__item form__item_type_name" placeholder="Жак Ив Кусто">
-            <input required minlength="2" type="text" class="form__item form__item_type_about" placeholder="Исследователь океана">
-            <button type="submit" class="form__submit-button">Сохранить</button>
-          </form>
-        </div>
+          <!-- <img src="images/Close.svg" alt="Закрыть окно" class="popup__close"> -->
+          <h2 class="form__header">Редактировать профиль</h2>
+          <input required minlength="2" type="text" class="form__item form__item_type_name" placeholder="Жак Ив Кусто">
+          <input required minlength="2" type="text" class="form__item form__item_type_about" placeholder="Исследователь океана">
+          <button type="submit" class="form__submit-button">Сохранить</button>
+        </form>
+      </div>
       </section>
     </main>
 
