--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="profile__avatar"></div>
         <div class="profile__profile-info">
           <div class="profile__edit-info">
-            <h1 class="profile__name">Жак Ив Кусто</h1>
+            <h1 class="profile__name">Жак-Ив Кусто</h1>
             <button class="profile__edit-button"></button>
           </div>
 
@@ -34,7 +34,7 @@
             <figure class="element">
               <img src="images/karachaevsk.jpg" alt="Сентинский храм" class="element__image">
               <figcaption class="element__caption">
-                <p class="element__place">Карачаевск</p>
+                <h2 class="element__place">Карачаевск</h2>
                 <button class="element__heart"></button>
               </figcaption>
             </figure>
@@ -44,7 +44,7 @@
             <figure class="element">
               <img src="images/elbrus.jpg" alt="Эльбрус" class="element__image">
               <figcaption class="element__caption">
-                <p class="element__place">Гора Эльбрус</p>
+                <h2 class="element__place">Гора Эльбрус</h2>
                 <button class="element__heart"></button>
               </figcaption>
             </figure>
@@ -54,7 +54,7 @@
             <figure class="element">
               <img src="images/dombay1.jpg" alt="Домбай" class="element__image">
               <figcaption class="element__caption">
-                <p class="element__place">Домбай</p>
+                <h2 class="element__place">Домбай</h2>
                 <button class="element__heart"></button>
               </figcaption>
             </figure>
@@ -64,7 +64,7 @@
             <figure class="element">
               <img src="images/elbrus.jpg" alt="Эльбрус" class="element__image">
               <figcaption class="element__caption">
-                <p class="element__place">Гора Эльбрус</p>
+                <h2 class="element__place">Гора Эльбрус</h2>
                 <button class="element__heart"></button>
               </figcaption>
             </figure>
@@ -74,7 +74,7 @@
             <figure class="element">
               <img src="images/dombay1.jpg" alt="Домбай" class="element__image">
               <figcaption class="element__caption">
-                <p class="element__place">Домбай</p>
+                <h2 class="element__place">Домбай</h2>
                 <button class="element__heart"></button>
               </figcaption>
             </figure>
@@ -84,7 +84,7 @@
             <figure class="element">
               <img src="images/karachaevsk.jpg" alt="Сентинский храм " class="element__image">
               <figcaption class="element__caption">
-                <p class="element__place">Карачаево-Черкесия</p>
+                <h2 class="element__place">Карачаево-Черкесия</h2>
                 <button class="element__heart"></button>
               </figcaption>
             </figure>
@@ -98,7 +98,7 @@
 
           <!-- <img src="images/Close.svg" alt="Закрыть окно" class="popup__close"> -->
           <h2 class="form__header">Редактировать профиль</h2>
-          <input required minlength="2" type="text" class="form__item form__item_type_name" placeholder="Жак Ив Кусто">
+          <input required minlength="2" type="text" class="form__item form__item_type_name" placeholder="Жак-Ив Кусто">
           <input required minlength="2" type="text" class="form__item form__item_type_about" placeholder="Исследователь океана">
           <button type="submit" class="form__submit-button">Сохранить</button>
         </form>
