--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="page">
     <header class="header">
-      <img src="images/logo1.svg" alt="Логотип проекта" class="header__logo">
+      <img src="images/logo1.svg" alt="Логотип проекта Место" class="header__logo">
     </header>
     <main class="main-page">
 
@@ -22,7 +22,6 @@
             <h1 class="profile__name">Жак-Ив Кусто</h1>
             <button class="profile__edit-button"></button>
           </div>
-
           <p class="profile__about-self">Исследователь океана</p>
         </div>
         <button class="profile__add-button"></button>
@@ -92,26 +91,23 @@
         </ul>
       </section>
 
-      <div class="popup">
+      <section class="popup">
         <form action="#" class="form">
-          <button class="popup__close"></button>
-
+          <button type="reset" class="popup__close"></button>
           <!-- <img src="images/Close.svg" alt="Закрыть окно" class="popup__close"> -->
           <h2 class="form__header">Редактировать профиль</h2>
           <input required minlength="2" type="text" class="form__item form__item_type_name" placeholder="Жак-Ив Кусто">
           <input required minlength="2" type="text" class="form__item form__item_type_about" placeholder="Исследователь океана">
           <button type="submit" class="form__submit-button">Сохранить</button>
         </form>
-      </div>
       </section>
     </main>
 
     <footer class="footer">
       <p class="footer__copyright">&copy;2020 Mesto Russia</p>
-
     </footer>
-  </div>
 
+  </div>
   <script src="js/index.js"></script>
 </body>
 
