--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     <main class="main-page">
 
       <section class="profile">
-        <div class="profile__avatar"></div>
+        <img src="images/Avatar-kusto.jpg" alt="Аватар профиля" class="profile__avatar">
         <div class="profile__profile-info">
           <div class="profile__edit-info">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
-            <button class="profile__edit-button"></button>
+            <button class="profile__edit-button" type="button" aria-label="Редактирование профиля"></button>
           </div>
           <p class="profile__about-self">Исследователь океана</p>
         </div>
-        <button class="profile__add-button"></button>
+        <button class="profile__add-button" type="button" aria-label="Добавить фото"></button>
       </section>
 
       <section class="elements-section">
@@ -34,7 +34,7 @@
               <img src="images/karachaevsk.jpg" alt="Сентинский храм" class="element__image">
               <figcaption class="element__caption">
                 <h2 class="element__place">Карачаевск</h2>
-                <button class="element__heart"></button>
+                <button class="element__heart" type="button" aria-label="Лайк"></button>
               </figcaption>
             </figure>
           </li>
@@ -44,7 +44,7 @@
               <img src="images/elbrus.jpg" alt="Эльбрус" class="element__image">
               <figcaption class="element__caption">
                 <h2 class="element__place">Гора Эльбрус</h2>
-                <button class="element__heart"></button>
+                <button class="element__heart" type="button" aria-label="Лайк"></button>
               </figcaption>
             </figure>
           </li>
@@ -54,7 +54,7 @@
               <img src="images/dombay1.jpg" alt="Домбай" class="element__image">
               <figcaption class="element__caption">
                 <h2 class="element__place">Домбай</h2>
-                <button class="element__heart"></button>
+                <button class="element__heart" type="button" aria-label="Лайк"></button>
               </figcaption>
             </figure>
           </li>
@@ -64,7 +64,7 @@
               <img src="images/elbrus.jpg" alt="Эльбрус" class="element__image">
               <figcaption class="element__caption">
                 <h2 class="element__place">Гора Эльбрус</h2>
-                <button class="element__heart"></button>
+                <button class="element__heart" type="button" aria-label="Лайк"></button>
               </figcaption>
             </figure>
           </li>
@@ -74,7 +74,7 @@
               <img src="images/dombay1.jpg" alt="Домбай" class="element__image">
               <figcaption class="element__caption">
                 <h2 class="element__place">Домбай</h2>
-                <button class="element__heart"></button>
+                <button class="element__heart" type="button" aria-label="Лайк" aria-label="Лайк"></button>
               </figcaption>
             </figure>
           </li>
@@ -84,28 +84,32 @@
               <img src="images/karachaevsk.jpg" alt="Сентинский храм " class="element__image">
               <figcaption class="element__caption">
                 <h2 class="element__place">Карачаево-Черкесия</h2>
-                <button class="element__heart"></button>
+                <button class="element__heart" type="button" aria-label="Лайк"></button>
               </figcaption>
             </figure>
           </li>
         </ul>
       </section>
 
-      <section class="popup">
-        <form action="#" class="form">
-          <button type="reset" class="popup__close"></button>
-          <!-- <img src="images/Close.svg" alt="Закрыть окно" class="popup__close"> -->
-          <h2 class="form__header">Редактировать профиль</h2>
-          <input required minlength="2" type="text" class="form__item form__item_type_name" placeholder="Жак-Ив Кусто">
-          <input required minlength="2" type="text" class="form__item form__item_type_about" placeholder="Исследователь океана">
-          <button type="submit" class="form__submit-button">Сохранить</button>
-        </form>
-      </section>
+
     </main>
 
     <footer class="footer">
       <p class="footer__copyright">&copy;2020 Mesto Russia</p>
     </footer>
+
+    <div class="popup">
+      <div class="form__container">
+        <button type="button" class="popup__close" aria-label="Закрыть окно"></button>
+        <!-- <img src="images/Close.svg" alt="Закрыть окно" class="popup__close"> -->
+        <h2 class="form__header">Редактировать профиль</h2>
+        <form action="#" class="form">
+          <input required minlength="2" type="text" class="form__item form__item_type_name" placeholder="Имя">
+          <input required minlength="2" type="text" class="form__item form__item_type_about" placeholder="О себе">
+          <button type="submit" class="form__submit-button">Сохранить</button>
+        </form>
+      </div>
+    </div>
 
   </div>
   <script src="js/index.js"></script>
