--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
         <button type="button" class="popup__close" aria-label="Закрыть окно"></button>
         <!-- <img src="images/Close.svg" alt="Закрыть окно" class="popup__close"> -->
         <h2 class="form__header">Редактировать профиль</h2>
-        <form action="#" class="form">
-          <input required minlength="2" type="text" class="form__item form__item_type_name" placeholder="Имя">
-          <input required minlength="2" type="text" class="form__item form__item_type_about" placeholder="О себе">
+        <form action="#" class="form" name="edit-profile">
+          <input required minlength="2" type="text" class="form__item form__item_type_name" name="input-name" placeholder="Имя">
+          <input required minlength="2" type="text" class="form__item form__item_type_about" name="input-about" placeholder="О себе">
           <button type="submit" class="form__submit-button">Сохранить</button>
         </form>
       </div>
