--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <img src="images/dombay1.jpg" alt="Домбай" class="element__image">
               <figcaption class="element__caption">
                 <h2 class="element__place">Домбай</h2>
-                <button class="element__heart" type="button" aria-label="Лайк" aria-label="Лайк"></button>
+                <button class="element__heart" type="button" aria-label="Лайк"></button>
               </figcaption>
             </figure>
           </li>
