--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
     </footer>
 
     <div class="popup">
-      <div class="form__container">
+      <div class="popup__form-container">
         <button type="button" class="popup__close" aria-label="Закрыть окно"></button>
         <!-- <img src="images/Close.svg" alt="Закрыть окно" class="popup__close"> -->
-        <h2 class="form__header">Редактировать профиль</h2>
+        <h2 class="popup__form-header">Редактировать профиль</h2>
         <form action="#" class="form" name="edit-profile">
           <input required minlength="2" type="text" class="form__item form__item_type_name" name="input-name" placeholder="Имя">
           <input required minlength="2" type="text" class="form__item form__item_type_about" name="input-about" placeholder="О себе">
