--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       <section class="elements-section">
         <ul class="elements">
-          <li>
+          <!-- <li>
             <figure class="element">
               <img src="images/karachaevsk.jpg" alt="Сентинский храм" class="element__image">
               <figcaption class="element__caption">
@@ -87,7 +87,7 @@
                 <button class="element__heart" type="button" aria-label="Лайк"></button>
               </figcaption>
             </figure>
-          </li>
+          </li> -->
         </ul>
       </section>
 
@@ -97,6 +97,18 @@
     <footer class="footer">
       <p class="footer__copyright">&copy;2020 Mesto Russia</p>
     </footer>
+
+    <template class="elements__template">
+      <li>
+        <figure class="element">
+          <img src="images/karachaevsk.jpg" alt="Сентинский храм" class="element__image">
+          <figcaption class="element__caption">
+            <h2 class="element__place">Карачаевск</h2>
+            <button class="element__heart" type="button" aria-label="Лайк"></button>
+          </figcaption>
+        </figure>
+      </li>
+    </template>
 
     <div class="popup">
       <div class="popup__form-container">
