--- a/index.html
+++ b/index.html
@@ -52,14 +52,25 @@
       </li>
     </template>
 
-    <div class="popup">
+    <div class="popup popup__edit-profile">
       <div class="popup__form-container">
         <button type="button" class="popup__close" aria-label="Закрыть окно"></button>
-        <!-- <img src="images/Close.svg" alt="Закрыть окно" class="popup__close"> -->
         <h2 class="popup__form-header">Редактировать профиль</h2>
         <form action="#" class="form" name="edit-profile">
           <input required minlength="2" type="text" class="form__item form__item_type_name" name="input-name" placeholder="Имя">
           <input required minlength="2" type="text" class="form__item form__item_type_about" name="input-about" placeholder="О себе">
+          <button type="submit" class="form__submit-button">Сохранить</button>
+        </form>
+      </div>
+    </div>
+
+    <div class="popup popup__add-card">
+      <div class="popup__form-container">
+        <button type="button" class="popup__close" aria-label="Закрыть окно"></button>
+        <h2 class="popup__form-header">Редактировать профиль</h2>
+        <form action="#" class="form" name="edit-profile">
+          <input required minlength="2" type="text" class="form__item form__item_type_name" name="input-place" placeholder="Имя">
+          <input required minlength="2" type="text" class="form__item form__item_type_about" name="input-url" placeholder="О себе">
           <button type="submit" class="form__submit-button">Сохранить</button>
         </form>
       </div>
