--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
     <div class="popup popup__add-card">
       <div class="popup__form-container">
         <button type="button" class="popup__close" aria-label="Закрыть окно"></button>
-        <h2 class="popup__form-header">Редактировать профиль</h2>
+        <h2 class="popup__form-header">Новое место</h2>
         <form action="#" class="form" name="edit-profile">
-          <input required minlength="2" type="text" class="form__item form__item_type_name" name="input-place" placeholder="Имя">
-          <input required minlength="2" type="text" class="form__item form__item_type_about" name="input-url" placeholder="О себе">
+          <input required minlength="2" type="text" class="form__item form__item_type_name" name="input-place" placeholder="Название">
+          <input required minlength="2" type="text" class="form__item form__item_type_about" name="input-url" placeholder="Ссылка на картинку">
           <button type="submit" class="form__submit-button">Сохранить</button>
         </form>
       </div>
