--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
     </footer>
 
     <template class="elements__template">
-      <li>
+      <li class="elements__item">
+        <button class="elements__item-delete" type="button" aria-label="Удалить это фото"></button>
         <figure class="element">
           <img src="images/karachaevsk.jpg" alt="Сентинский храм" class="element__image">
           <figcaption class="element__caption">
