--- a/index.html
+++ b/index.html
@@ -77,6 +77,19 @@
       </div>
     </div>
 
+    <div class="popup popup_view_image">
+      <div class="popup__view-container">
+        <button type="button" class="popup__close" aria-label="Закрыть окно"></button>
+        <figure class="element-view">
+          <img src="images/karachaevsk.jpg" alt="Сентинский храм" class="element-view__image">
+          <figcaption class="element-view__caption">
+            <h2 class="element-view__place">Карачаевск</h2>
+          </figcaption>
+        </figure>
+      </div>
+    </div>
+
+
   </div>
   <script src="js/index.js"></script>
 </body>
