--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
       <li class="elements__item">
         <button class="elements__item-delete" type="button" aria-label="Удалить это фото"></button>
         <figure class="element">
-          <img src="" alt="" class="element__image">
+          <img src="#" alt="#" class="element__image">
           <figcaption class="element__caption">
-            <h2 class="element__place"></h2>
+            <h2 class="element__place">#</h2>
             <button class="element__heart" type="button" aria-label="Лайк"></button>
           </figcaption>
         </figure>
