--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </li>
     </template>
 
-    <div class="popup popup_type_edit-profile">
+    <section class="popup popup_type_edit-profile">
       <div class="popup__form-container">
         <button type="button" class="popup__close" aria-label="Закрыть окно"></button>
         <h2 class="popup__form-header">Редактировать профиль</h2>
@@ -61,9 +61,9 @@
           <button type="submit" class="form__submit-button">Сохранить</button>
         </form>
       </div>
-    </div>
+    </section>
 
-    <div class="popup popup_type_add-card">
+    <section class="popup popup_type_add-card">
       <div class="popup__form-container">
         <button type="button" class="popup__close" aria-label="Закрыть окно"></button>
         <h2 class="popup__form-header">Новое место</h2>
@@ -73,9 +73,9 @@
           <button type="submit" class="form__submit-button">Создать</button>
         </form>
       </div>
-    </div>
+    </section>
 
-    <div class="popup popup_type_view-image">
+    <section class="popup popup_type_view-image">
       <div class="popup__view-container">
         <button type="button" class="popup__close" aria-label="Закрыть окно"></button>
         <figure class="element-view">
@@ -85,7 +85,7 @@
           </figcaption>
         </figure>
       </div>
-    </div>
+    </section>
 
   </div>
   <script src="js/index.js"></script>
