--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
         <button type="button" class="popup__close" aria-label="Закрыть окно"></button>
         <h2 class="popup__form-header">Редактировать профиль</h2>
         <form action="#" class="form form_type_edit-profile" name="edit-profile">
-          <input required minlength="2" type="text" class="form__item form__item_type_name" name="input-name" placeholder="Имя">
-          <input required minlength="2" type="text" class="form__item form__item_type_about" name="input-about" placeholder="О себе">
+          <input required minlength="2" maxlength="40" type="text" class="form__item form__item_type_name" name="input-name" placeholder="Имя">
+          <span class="form__error-massage form__error-massage_visible error-massage_type_input-name"></span>
+          <input required minlength="2" maxlength="200" type="text" class="form__item form__item_type_about" name="input-about" placeholder="О себе">
           <button type="submit" class="form__submit-button">Сохранить</button>
         </form>
       </div>
@@ -68,8 +69,8 @@
         <button type="button" class="popup__close" aria-label="Закрыть окно"></button>
         <h2 class="popup__form-header">Новое место</h2>
         <form action="#" class="form form_edit_place" name="edit-profile">
-          <input required minlength="2" maxlength="50" type="text" class="form__item form__item_type_place" name="input-place" placeholder="Название">
-          <input required minlength="2" type="url" class="form__item form__item_type_link" name="input-link" placeholder="Ссылка на картинку">
+          <input required minlength="2" maxlength="30" type="text" class="form__item form__item_type_place" name="input-place" placeholder="Название">
+          <input required type="url" class="form__item form__item_type_link" name="input-link" placeholder="Ссылка на картинку">
           <button type="submit" class="form__submit-button">Создать</button>
         </form>
       </div>
