--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
         <h2 class="popup__form-header">Редактировать профиль</h2>
         <form action="#" class="form form_type_edit-profile" name="edit-profile">
           <input required minlength="2" maxlength="40" type="text" class="form__item form__item_type_name" name="input-name" placeholder="Имя">
-          <span class="form__error-message form__error-message_visible error-message_type_input-name"> </span>
+          <span class="form__error-message"> </span>
           <input required minlength="2" maxlength="200" type="text" class="form__item form__item_type_about" name="input-about" placeholder="О себе">
-          <span class="form__error-message form__error-message_visible error-message_type_input-about"></span>
+          <span class="form__error-message"></span>
           <button type="submit" class="form__submit-button">Сохранить</button>
         </form>
       </div>
