--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="profile__profile-info">
           <div class="profile__edit-info">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
-            <button class="profile__edit-button" type="button" aria-label="Редактирование профиля"></button>
+            <button class="profile__edit-button" type="button" aria-label="Редактирование профиля" name="edit-profile"></button>
           </div>
           <p class="profile__about-self">Исследователь океана</p>
         </div>
@@ -55,7 +55,7 @@
       <div class="popup__form-container">
         <button type="button" class="popup__close" aria-label="Закрыть окно"></button>
         <h2 class="popup__form-header">Редактировать профиль</h2>
-        <form action="#" class="form form_type_edit-profile" name="edit-profile">
+        <form action="#" class="form form_type_edit-profile" name="edit-profile" novalidate>
           <input required minlength="2" maxlength="40" type="text" class="form__item form__item_type_name" name="input-name" placeholder="Имя">
           <span class="form__error-message form__error-message_type_input-name"> </span>
           <input required minlength="2" maxlength="200" type="text" class="form__item form__item_type_about" name="input-about" placeholder="О себе">
@@ -69,7 +69,7 @@
       <div class="popup__form-container">
         <button type="button" class="popup__close" aria-label="Закрыть окно"></button>
         <h2 class="popup__form-header">Новое место</h2>
-        <form action="#" class="form form_edit_place" name="edit-place">
+        <form action="#" class="form form_edit_place" name="edit-place" novalidate>
           <input required minlength="2" maxlength="30" type="text" class="form__item form__item_type_place" name="input-place" placeholder="Название">
           <span class="form__error-message form__error-message_type_input-place"></span>
           <input required type="url" class="form__item form__item_type_link" name="input-link" placeholder="Ссылка на картинку">
@@ -93,7 +93,7 @@
 
   </div>
   <script src="js/index.js"></script>
-  <script src="js/val.js"></script>
+  <script src="js/validate.js"></script>
 </body>
 
 </html>
