--- a/index.html
+++ b/index.html
@@ -92,8 +92,11 @@
     </section>
 
   </div>
-  <script src="js/index.js"></script>
-  <script src="js/validate.js"></script>
+
+  <script type="module" src="js/index.js"></script>
+  <script type="module" src="js/card.js"></script>
+
+  <!-- <script src="js/validate.js"></script> -->
 </body>
 
 </html>
