--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   </div>
 
   <script type="module" src="js/index.js"></script>
-  <script type="module" src="js/card.js"></script>
+  <!-- <script type="module" src="js/card.js"></script> -->
 
   <!-- <script src="js/validate.js"></script> -->
 </body>
