--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="popup__form-container">
         <button type="button" class="popup__close" aria-label="Закрыть окно"></button>
         <h2 class="popup__form-header">Новое место</h2>
-        <form action="#" class="form form_edit_place" name="edit-place" novalidate>
+        <form action="#" class="form form_type_edit_place" name="edit-place" novalidate>
           <input required minlength="2" maxlength="30" type="text" class="form__item form__item_type_place" name="input-place" placeholder="Название">
           <span class="form__error-message form__error-message_type_input-place"></span>
           <input required type="url" class="form__item form__item_type_link" name="input-link" placeholder="Ссылка на картинку">
