--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="pages/index.css">
+  <link rel="stylesheet" href="index.css">
   <title>"Место"</title>
 </head>
 
@@ -90,13 +90,9 @@
         </figure>
       </div>
     </section>
+    <script type="text/javascript" src="index.js"></script>
 
   </div>
-
-  <script type="module" src="js/index.js"></script>
-  <!-- <script type="module" src="js/card.js"></script> -->
-
-  <!-- <script src="js/validate.js"></script> -->
 </body>
 
 </html>
