--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="index.css">
+  <!-- <link rel="stylesheet" href="index.css"> -->
   <title>"Место"</title>
 </head>
 
@@ -90,7 +90,7 @@
         </figure>
       </div>
     </section>
-    <script type="text/javascript" src="index.js"></script>
+
 
   </div>
 </body>
