--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,12 @@
 <body class="body">
   <div class="page">
     <header class="header">
-      <img src="images/logo1.svg" alt="Логотип проекта Место" class="header__logo">
+      <img src="<%=require('./images/logo1.svg')%>" alt="Логотип проекта Место" class="header__logo">
     </header>
     <main class="main-page">
 
       <section class="profile">
-        <img src="images/Avatar-kusto.jpg" alt="Аватар профиля" class="profile__avatar">
+        <img src="<%=require('./images/Avatar-kusto.jpg')%>" alt="Аватар профиля" class="profile__avatar">
         <div class="profile__profile-info">
           <div class="profile__edit-info">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -83,7 +83,7 @@
       <div class="popup__view-container">
         <button type="button" class="popup__close" aria-label="Закрыть окно"></button>
         <figure class="element-view">
-          <img src="images/karachaevsk.jpg" alt="Сентинский храм" class="element-view__image">
+          <img src="#" alt="#" class="element-view__image">
           <figcaption class="element-view__caption">
             <h2 class="element-view__place"></h2>
           </figcaption>
