--- a/src/index.html
+++ b/src/index.html
@@ -56,10 +56,10 @@
         <button type="button" class="popup__close" aria-label="Закрыть окно"></button>
         <h2 class="popup__form-header">Редактировать профиль</h2>
         <form action="#" class="form form_type_edit-profile" name="edit-profile" novalidate>
-          <input required minlength="2" maxlength="40" type="text" class="form__item form__item_type_name" name="input-name" placeholder="Имя">
-          <span class="form__error-message form__error-message_type_input-name"> </span>
-          <input required minlength="2" maxlength="200" type="text" class="form__item form__item_type_about" name="input-about" placeholder="О себе">
-          <span class="form__error-message form__error-message_type_input-about"></span>
+          <input required minlength="2" maxlength="40" type="text" class="form__item form__item_type_name" name="user" placeholder="Имя">
+          <span class="form__error-message form__error-message_type_user"> </span>
+          <input required minlength="2" maxlength="200" type="text" class="form__item form__item_type_about" name="character" placeholder="О себе">
+          <span class="form__error-message form__error-message_type_character"></span>
           <button type="submit" class="form__submit-button">Сохранить</button>
         </form>
       </div>
@@ -70,10 +70,10 @@
         <button type="button" class="popup__close" aria-label="Закрыть окно"></button>
         <h2 class="popup__form-header">Новое место</h2>
         <form action="#" class="form form_type_edit-place" name="edit-place" novalidate>
-          <input required minlength="2" maxlength="30" type="text" class="form__item form__item_type_place" name="input-place" placeholder="Название">
-          <span class="form__error-message form__error-message_type_input-place"></span>
-          <input required type="url" class="form__item form__item_type_link" name="input-link" placeholder="Ссылка на картинку">
-          <span class="form__error-message form__error-message_type_input-link"></span>
+          <input required minlength="2" maxlength="30" type="text" class="form__item form__item_type_place" name="name" placeholder="Название">
+          <span class="form__error-message form__error-message_type_name"></span>
+          <input required type="url" class="form__item form__item_type_link" name="link" placeholder="Ссылка на картинку">
+          <span class="form__error-message form__error-message_type_link"></span>
           <button type="submit" class="form__submit-button">Создать</button>
         </form>
       </div>
