--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,9 @@
     <main class="main-page">
 
       <section class="profile">
-        <img src="<%=require('./images/Avatar-kusto.jpg')%>" alt="Аватар профиля" class="profile__avatar">
+        <button class="profile__avatar-button" type="button" aria-label="Редактировать аватар">
+          <img src="#" alt="Аватар профиля" class="profile__avatar">
+        </button>
         <div class="profile__profile-info">
           <div class="profile__edit-info">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -90,6 +92,29 @@
         </figure>
       </div>
     </section>
+
+    <section class="popup popup_type_delete-card">
+      <div class="popup__form-container">
+        <button type="button" class="popup__close" aria-label="Закрыть окно"></button>
+        <h2 class="popup__form-header">Вы уверены?</h2>
+        <form action="#" class="form form_type_delete-place" name="delete-place" novalidate>
+          <button type="submit" class="form__submit-button">Да</button>
+        </form>
+      </div>
+    </section>
+
+    <section class="popup popup_type_chenge-avatar">
+      <div class="popup__form-container">
+        <button type="button" class="popup__close" aria-label="Закрыть окно"></button>
+        <h2 class="popup__form-header">Обновить аватар</h2>
+        <form action="#" class="form form_type_chenge-avatar" name="chenge-avatar" novalidate>
+          <input required type="url" class="form__item form__item_type_avatar" name="avatar" placeholder="Ссылка на аватар">
+          <span class="form__error-message form__error-message_type_avatar"></span>
+          <button type="submit" class="form__submit-button">Сохранить</button>
+        </form>
+      </div>
+    </section>
+
   </div>
 </body>
 
