--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,10 @@
           <img src="#" alt="#" class="element__image">
           <figcaption class="element__caption">
             <h2 class="element__place">#</h2>
-            <button class="element__heart" type="button" aria-label="Лайк"></button>
+            <div>
+              <button class="element__heart" type="button" aria-label="Лайк"></button>
+              <span class="element__like-number">0</span>
+            </div>
           </figcaption>
         </figure>
       </li>
